2012f/test/correct/DoubleQuote.c1
int main() {
	write("abc\"123");
	return 1;
}