2012f/test/error/Comma.c1
void main() {
	int fact,
	int i, ,j;

	return;
}